start adding buttons and ET

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,9 +15,9 @@
         android:id="@+id/etYoutubeUrl"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:layout_marginTop="350dp"
-        android:text="Name" />
+        android:hint="Enter YouTube URL"
+        android:layout_marginTop="320dp"
+        android:inputType="textPersonName" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -27,13 +27,13 @@
             android:id="@+id/btDownloadVideo"
             android:layout_width="190dp"
             android:layout_height="wrap_content"
-            android:text="Button" />
+            android:text="Download Video" />
 
         <Button
             android:id="@+id/btDownloadAudio"
             android:layout_width="190dp"
             android:layout_height="wrap_content"
-            android:text="Button" />
+            android:text="Download Audio" />
 
     </LinearLayout>
 
